--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@types/three": "^0.180.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
